# cpp-AEC

./: .bumpversion.cfg  .gitmodules  .travis.yml  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  circle.yml  codecov.yml  snapcraft.yaml
aeckey/: CMakeLists.txt  KeyAux.h  main.cpp
aecvm/: CMakeLists.txt  main.cpp
alaec/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  MinerAux.h  main.cpp
cmake/: EthCheckCXXCompilerFlag.cmake  EthCompilerSettings.cmake  EthDependencies.cmake  EthExecutableHelper.cmake  EthOptions.cmake  EthUtils.cmake  HunterGate.cmake  UseMiniupnpc.cmake
doc/: Doxyfile  database_layout.rst  dependencies.rst  generating_tests.rst  snapshot_sync.rst  usingtesteth.rst
homebrew/: INSTALL_RECEIPT.json  fix_homebrew_paths_in_standalone_zip.py  homebrew.mxcl.cpp-ethereum.plist  prepare_receipt.sh
libaecashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  EthashCPUMiner.h  EthashClient.cpp  EthashClient.h  EthashProofOfWork.cpp  EthashProofOfWork.h  GenesisInfo.cpp  GenesisInfo.h
libaecashseal/genesis/: mainNetwork.cpp  ropsten.cpp
libaecashseal/genesis/test/: EIP158ToByzantiumAt5Test.cpp  byzantiumTest.cpp  byzantiumTransitionTest.cpp  constantinopleTest.cpp  constantinopleTransitionTest.cpp  eip150Test.cpp  eip158Test.cpp  frontierNoProofTest.cpp  frontierTest.cpp  frontierToHomesteadAt5Test.cpp  homesteadTest.cpp  homesteadToDaoAt5Test.cpp  homesteadToEIP150At5Test.cpp  mainNetworkNoProofTest.cpp  mainNetworkTest.cpp  transitionnetTest.cpp
libaeccore/: BasicAuthority.cpp  BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  CommonJS.cpp  CommonJS.h  EVMSchedule.h  Exceptions.h  KeyManager.cpp  KeyManager.h  LogEntry.cpp  LogEntry.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h
libaecereum/: Account.cpp  Account.h  BasicGasPricer.cpp  BasicGasPricer.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainImporter.cpp  BlockChainImporter.h  BlockChainSync.cpp  BlockChainSync.h  BlockDetails.cpp  BlockDetails.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CodeSizeCache.h  CommonNet.cpp  CommonNet.h  Defaults.cpp  Defaults.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  GasPricer.cpp  GasPricer.h  (+30 more)
libdevcore/: Address.cpp  Address.h  Assertions.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.cpp  CommonJS.h  DBImpl.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.cpp  Guards.h  JsonUtils.cpp  JsonUtils.h  LevelDB.cpp  LevelDB.h  Log.cpp  Log.h  LoggingProgramOptions.cpp  LoggingProgramOptions.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  RLP.cpp  RLP.h  RangeMask.h  SHA3.cpp  SHA3.h  Terminal.h  TransientDirectory.cpp  TransientDirectory.h  (+11 more)
libdevcrypto/: AES.cpp  AES.h  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  Exceptions.h  Hash.cpp  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h
libevm/: CMakeLists.txt  EVMC.cpp  EVMC.h  ExtVMFace.cpp  ExtVMFace.h  Instruction.cpp  Instruction.h  LegacyVM.cpp  LegacyVM.h  LegacyVMCalls.cpp  LegacyVMOpt.cpp  VM.cpp  VM.h  VMCalls.cpp  VMConfig.h  VMFace.h  VMFactory.cpp  VMFactory.h  VMOpt.cpp  VMSIMD.cpp  VMValidate.cpp
libp2p/: CMakeLists.txt  Capability.cpp  Capability.h  Common.cpp  Common.h  Host.cpp  Host.h  HostCapability.cpp  HostCapability.h  (+18 more)
libweb3jsonrpc/: AccountHolder.cpp  AccountHolder.h  AdminEth.cpp  AdminEth.h  AdminEthFace.h  AdminNet.cpp  AdminNetFace.h  CMakeLists.txt  Debug.cpp  Debug.h  DebugFace.h  Eth.cpp  Eth.h  EthFace.h  IpcServer.h  IpcServerBase.cpp  IpcServerBase.h  JsonHelper.cpp  JsonHelper.h  ModularServer.h  Net.cpp  Net.h  NetFace.h  Personal.cpp  Personal.h  PersonalFace.h  Test.cpp  Test.h  TestFace.h  UnixSocketServer.cpp  UnixSocketServer.h  Web3.cpp  Web3.h  Web3Face.h  WhisperFace.h  WinPipeServer.cpp  WinPipeServer.h  admin_eth.json  eth.json
test/: CMakeLists.txt
test/tools/fuzzTesting/: BoostRandomCode.cpp  BoostRandomCode.h  RandomCode.h  createRandomTest.cpp  fuzzHelper.cpp  fuzzHelper.h
test/tools/jsontests/: BlockChainTests.cpp  BlockChainTests.h  StateTests.cpp  StateTests.h  TransactionTests.cpp  TransactionTests.h  vm.cpp  vm.h
test/tools/libtesteth/: BlockChainHelper.cpp  BlockChainHelper.h  FillJsonFunctions.cpp  ImportTest.cpp  ImportTest.h  JsonSpiritHeaders.h  Options.cpp  Options.h  Stats.cpp  Stats.h  TestHelper.cpp  TestHelper.h  TestOutputHelper.cpp  TestOutputHelper.h  TestSuite.cpp  TestSuite.h  TestUtils.cpp  TestUtils.h  boostTest.cpp
test/tools/libtestutils/: BlockChainLoader.cpp  BlockChainLoader.h  Common.cpp  Common.h  FixedClient.cpp  FixedClient.h  TestLastBlockHashes.h
test/unittests/external-dependencies/: boost.cpp
test/unittests/libdevcore/: CommonJS.cpp  FixedHash.cpp  RangeMask.cpp  core.cpp  rlp.cpp
test/unittests/libdevcrypto/: AES.cpp  LibSnark.cpp  MemTrie.cpp  MemTrie.h  SecretStore.cpp  crypto.cpp  hexPrefix.cpp  trie.cpp
test/unittests/libethashseal/: EthashTest.cpp
test/unittests/libethcore/: PrecompiledTest.cpp  SealEngineTest.cpp  commonjs.cpp  difficulty.cpp  keymanager.cpp
test/unittests/libethereum/: Block.cpp  BlockChain.cpp  BlockChainInsert.cpp  BlockQueue.cpp  ClientBase.cpp  ClientTest.cpp  EthereumPeerTest.cpp  ExtVMTest.cpp  GasPricer.cpp  Genesis.cpp  SnapshotImporterTest.cpp  StateUnitTests.cpp  Transaction.cpp  TransactionQueue.cpp
test/unittests/libp2p/: capability.cpp  eip-8.cpp  net.cpp  peer.cpp  rlpx.cpp
test/unittests/libtesteth/: blockchainTest.cpp  testHelperTest.cpp
test/unittests/libweb3core/: memorydb.cpp  overlaydb.cpp
test/unittests/libweb3jsonrpc/: AccountHolder.cpp  Client.cpp  WebThreeStubClient.h  jsonrpc.cpp
test/unittests/performance/: README  tests.mk
(+45 files in other folders)
